b=528852 subtract invalid regions in move destinations r=roc